--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mapbox-gl": "^3.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-map-gl": "^8.0.3",
     "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.1.3"
