--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "mapbox-gl": "^3.11.0",
@@ -18,6 +19,7 @@
     "react-dropzone": "^14.3.8",
     "react-map-gl": "^8.0.3",
     "react-router-dom": "^7.5.0",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
