--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stomp/stompjs": "^7.1.1",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "mapbox-gl": "^3.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
